--- a/blogs/OsgiConfigurationFactory.html
+++ b/blogs/OsgiConfigurationFactory.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | OSGI Configuration Factory</title>
+	<title>OSGI Configuration Factory</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to the blog designed for developers new to the OSGI Factory Concepts. This blog will walk you through How the Osgi Configuration class has been created and how to retrive the list of Configurations">
   	<meta name="keywords" content="Infodales, OSGI Configuration Factory">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | OSGI Configuration Factory" />
+    <meta property="og:title" content="OSGI Configuration Factory" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the OSGI Factory Concepts. This blog will walk you through How the Osgi Configuration class has been created and how to retrive the list of Configurations" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | OSGI Configuration Factory" />
+    <meta property="og:url" content="https://infodales.com/blogs/OsgiConfigurationFactory.html" />
+    <meta property="og:site_name" content="OSGI Configuration Factory" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
