--- a/blogs/adaptive-form-fragments.html
+++ b/blogs/adaptive-form-fragments.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | AEM Forms : Adaptive Form Fragments</title>
+	<title>AEM Forms : Adaptive Form Fragments</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content=" AEM Forms : Adaptive Form Fragments">
+	<meta name="description" content="AEM Forms : Adaptive Form Fragments">
     <meta name="keywords" content="Adaptive Forms make it easy to create a form part, like a panel or a bunch of fields, just one time and use it again in different Adaptive Forms. These reusable parts are called Adaptive Form fragments.">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | AEM Forms : Adaptive Form Fragments" />
+    <meta property="og:title" content="AEM Forms : Adaptive Form Fragments" />
     <meta property="og:description" content="Adaptive Form Fragments are a feature within Adobe Experience Manager (AEM) Forms that allows for the creation of reusable form components. These fragments can be used across multiple adaptive forms, which are dynamic and responsive forms designed to provide a user-friendly experience on various devices and screen sizes." />
-    <meta property="og:url" content="https://infodales.com/adaptive-form-fragments.html" />
-    <meta property="og:site_name" content="Blogs | AEM Forms : Adaptive Form Fragments" />
+    <meta property="og:url" content="https://infodales.com/blogs/adaptive-form-fragments.html" />
+    <meta property="og:site_name" content="AEM Forms : Adaptive Form Fragments" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
