--- a/blogs/aem-graphql.html
+++ b/blogs/aem-graphql.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | GraphQL in AEM</title>
+	<title>GraphQL in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Understanding and implenting GraphQL in AEM">
     <meta name="keywords" content="Infodales, GraphQL in AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | GraphQL in AEM" />
+    <meta property="og:title" content="GraphQL in AEM" />
     <meta property="og:description" content="Understanding and implenting GraphQL in AEM" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | GraphQL in AEM" />
+    <meta property="og:url" content="https://infodales.com/blogs/aem-graphql.html" />
+    <meta property="og:site_name" content="GraphQL in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
