--- a/blogs/aem-introduction.html
+++ b/blogs/aem-introduction.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Introduction to AEM Sites</title>
+	<title>Introduction to AEM Sites</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to the blog designed for developers new to the AEM Sites concept. This blog will walk you through AEM Introduction, AEM is preferred and Architecture of AEM.">
     <meta name="keywords" content="Infodales, Adobe AEM Sites, AEM Introduction, AEM Architecture and Types of AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Getting started with AEM Sites" />
+    <meta property="og:title" content="Getting started with AEM Sites" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM Sites concept. This blog will walk you through AEM Introduction, AEM is preferred and Architecture of AEM." />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Getting started with AEM Sites" />
+    <meta property="og:url" content="https://infodales.com/blogs/aem-introduction.html" />
+    <meta property="og:site_name" content="Getting started with AEM Sites" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
