--- a/blogs/aem-msm.html
+++ b/blogs/aem-msm.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Blogs | MSM (Multi Site Manager)</title>
+	<title>MSM (Multi Site Manager)</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Understanding and implenting MSM (Multi Site Manager)">
     <meta name="keywords" content="Infodales, MSM in AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | MSM in AEM" />
+    <meta property="og:title" content="MSM in AEM" />
     <meta property="og:description" content="Understanding and implenting MSM (Multi Site Manager)"/>
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | MSM in AEM" />
+    <meta property="og:url" content="https://infodales.com/blogs/aem-msm.html" />
+    <meta property="og:site_name" content="MSM in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
