--- a/blogs/cloud-services.html
+++ b/blogs/cloud-services.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Sending Email on Submission of Adaptive Form</title>
+	<title>AEM as a Cloud Service: Powering Next-Generation Digital Experiences</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content=" What is AEM as a Cloud Service">
     <meta name="keywords" content="AEM as a Cloud Service offers a range of powerful features designed to enhance digital experience management and streamline content delivery. Here are some key features of AEM as a Cloud Service:">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | AEM as a Cloud Service: Powering Next-Generation Digital Experiences" />
+    <meta property="og:title" content="AEM as a Cloud Service: Powering Next-Generation Digital Experiences" />
     <meta property="og:description" content="Learn how to configure AEM Forms to send emails automatically upon submission of Adaptive Forms. Streamline your form processing with our step-by-step guide." />
-    <meta property="og:url" content="https://infodales.com/form-submission.html" />
-    <meta property="og:site_name" content="Blogs | AEM as a Cloud Service: Powering Next-Generation Digital Experiences" />
+    <meta property="og:url" content="https://infodales.com/blogs/cloud-services.html" />
+    <meta property="og:site_name" content="AEM as a Cloud Service: Powering Next-Generation Digital Experiences" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
