--- a/blogs/context-aware-configuration.html
+++ b/blogs/context-aware-configuration.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Context Aware Configuration</title>
+	<title>Context Aware Configuration</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content=" Context Aware Configuration">
     <meta name="keywords" content="Context Aware Configuration (CA-Config) in Adobe Experience Manager (AEM) is a powerful feature that allows for the flexible and dynamic application of settings and configurations based on the context of content within the AEM hierarchy.">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Context Aware Configuration" />
+    <meta property="og:title" content="Context Aware Configuration" />
     <meta property="og:description" content="Context Aware Configuration (CA-Config) in Adobe Experience Manager (AEM) is a powerful feature that allows for the flexible and dynamic application of settings and configurations based on the context of content within the AEM hierarchy." />
-    <meta property="og:url" content="https://infodales.com/ContextAware.html" />
-    <meta property="og:site_name" content="Blogs | Context Aware Configuration" />
+    <meta property="og:url" content="https://infodales.com/blogs/context-aware-configuration.html" />
+    <meta property="og:site_name" content="Context Aware Configuration" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
