--- a/blogs/custom-button-and-console.html
+++ b/blogs/custom-button-and-console.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Creating custom button & console in AEM</title>
+	<title>Creating custom button and console in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Adobe Experience Manager (AEM) is a comprehensive content management solution for building websites, mobile apps, and forms. AEM's flexibility allows developers to customize its interface extensively. In this blog, we'll walk through the steps to create a custom button in the AEM console and how to add a custom navigation tab and console.">
   	<meta name="keywords" content="Infodales, Adobe AEM, Custom button, Custom AEM console, AEM Console">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Creating custom button & console in AEM" />
+    <meta property="og:title" content="Creating custom button and console in AEM" />
     <meta property="og:description" content="Adobe Experience Manager (AEM) is a comprehensive content management solution for building websites, mobile apps, and forms. AEM's flexibility allows developers to customize its interface extensively. In this blog, we'll walk through the steps to create a custom button in the AEM console and how to add a custom navigation tab and console." />
     <meta property="og:url" content="https://infodales.com/blogs/custom-button-and-console.html" />
-    <meta property="og:site_name" content="Blogs | Creating custom button & console in AEM" />
+    <meta property="og:site_name" content="Creating custom button and console in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
@@ -54,7 +52,7 @@
 
 				<p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
 				width: fit-content; padding: 3px 15px;">AEM Sites</p>
-				<h1 class="title">Creating custom button & console in AEM</h1>
+				<h1 class="title">Creating custom button and console in AEM</h1>
       				<span class="author">Infodales Tech Solutions</span> |
       				<span class="date">August 9, 2023</span>
     			
