--- a/blogs/custom-prefill-services.html
+++ b/blogs/custom-prefill-services.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Custom Prefill Services in AEM Forms</title>
+	<title>Custom Prefill Services in AEM Forms</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to the blog designed for developers new to the AEM Forms . This blog will walk you through some of the concepts like .What is Custom Prefill ServiceIn AEM Form? and most importantly. How to Implement Custom Prefill Services In Aem Forms? We'll cover these questions in this blog.">
   	<meta name="keywords" content="Infodales, Custom Prefill Services">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Custom Prefill Services in AEM Forms" />
+    <meta property="og:title" content="Custom Prefill Services in AEM Forms" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM Forms . This blog will walk you through some of the concepts like .What is Custom Prefill ServiceIn AEM Form? and most importantly. How to Implement Custom Prefill Services In Aem Forms? We'll cover these questions in this blog." />
     <meta property="og:url" content="https://infodales.com/blogs/custom-prefill-services.html" />
-    <meta property="og:site_name" content="Blogs | Custom Prefill Services in AEM Forms" />
+    <meta property="og:site_name" content="Custom Prefill Services in AEM Forms" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
