--- a/blogs/form-rule-editor.html
+++ b/blogs/form-rule-editor.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | How to Add Custom Functions in Rule Editor</title>
+	<title>How to Add Custom Functions in Rule Editor</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to the blog designed for developers new to the AEM Forms concept. In this blog post, we’ll walk through the steps to add custom functions to the rule editor.">
     <meta name="keywords" content="Infodales, Adobe AEM Forms">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | How to Add Custom Functions in Rule Editor" />
+    <meta property="og:title" content="How to Add Custom Functions in Rule Editor" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM Forms concept. In this blog post, we’ll walk through the steps to add custom functions to the rule editor." />
-    <meta property="og:url" content="https://infodales.com/form-rule-editor.html" />
-    <meta property="og:site_name" content="Blogs | How to Add Custom Functions in Rule Editor" />
+    <meta property="og:url" content="https://infodales.com/blogs/form-rule-editor.html" />
+    <meta property="og:site_name" content="How to Add Custom Functions in Rule Editor" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
