--- a/blogs/form-submission.html
+++ b/blogs/form-submission.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Sending Email on Submission of Adaptive Form</title>
+	<title>Sending Email on Submission of Adaptive Form</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="This blog aims to guide you through the process of setting up email notifications upon submitting an adaptive form. When users submit an adaptive form, it's essential to acknowledge their submission promptly.">
     <meta name="keywords" content="Infodales, Adobe AEM Forms,Email Integration, Email Submission, Form Processing, Email Submission by AEM Forms, AEM Forms Sending Email,Sending Email by AEM Form, SMTP, Adaptive Form">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Sending Email on Submission of Adaptive Form" />
+    <meta property="og:title" content="Sending Email on Submission of Adaptive Form" />
     <meta property="og:description" content="Learn how to configure AEM Forms to send emails automatically upon submission of Adaptive Forms. Streamline your form processing with our step-by-step guide." />
-    <meta property="og:url" content="https://infodales.com/form-submission.html" />
-    <meta property="og:site_name" content="Blogs | Sending Email on Submission of Adaptive Form" />
+    <meta property="og:url" content="https://infodales.com/blogs/form-submission.html" />
+    <meta property="og:site_name" content="Sending Email on Submission of Adaptive Form" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
