--- a/blogs/forms-introduction.html
+++ b/blogs/forms-introduction.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Blogs | Introduction to AEM Form</title>
+    <title>Introduction to AEM Form</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to our blog for AEM Forms beginners! In this guide, we'll explore key AEM Forms concepts, answering questions like What are Adaptive Forms? and AEM Form Fragment. We aim to give you a clear and comprehensive understanding of these topics. Stay tuned for insights and tips!">
     <meta name="keywords" content="Infodales, Adobe AEM Forms, AEM Forms Introduction, Adaptive Forms and Forms Fragment ">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Getting started with AEM Forms" />
+    <meta property="og:title" content="Getting started with AEM Forms" />
     <meta property="og:description" content="Welcome to our blog for AEM Forms beginners! In this guide, we'll explore key AEM Forms concepts, answering questions like What are Adaptive Forms? and AEM Form Fragment. We aim to give you a clear and comprehensive understanding of these topics. Stay tuned for insights and tips!" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Getting started with AEM Forms" />
+    <meta property="og:url" content="https://infodales.com/blogs/forms-introduction.html" />
+    <meta property="og:site_name" content="Getting started with AEM Forms" />
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
