--- a/blogs/geolocation-forms.html
+++ b/blogs/geolocation-forms.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | AEM Forms : Adaptive Form Fragments</title>
+	<title>Geolocation : AEM Forms with Dynamic Location</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content=" Geolocation : AEM Forms with Dynamic Location">
     <meta name="keywords" content=" In today’s digital world, enhancing user experience in forms can significantly impact engagement and usability. In this blog, we’ll guide you through creating dynamic forms that fetch and populate dropdown lists with city, state, and country data. By leveraging GeoNames for location data, you’ll be able to create a highly interactive and user-friendly form experience. We’ll also cover the essential steps, including setting up a GeoNames account. Join us as we dive into these powerful integrations to make your AEM forms smarter and more responsive.">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Geolocation : AEM Forms with Dynamic Location" />
+    <meta property="og:title" content="Geolocation : AEM Forms with Dynamic Location" />
     <meta property="og:description" content="In today’s digital world, enhancing user experience in forms can significantly impact engagement and usability. In this blog, we’ll guide you through creating dynamic forms that fetch and populate dropdown lists with city, state, and country data. By leveraging GeoNames for location data, you’ll be able to create a highly interactive and user-friendly form experience. We’ll also cover the essential steps, including setting up a GeoNames account. Join us as we dive into these powerful integrations to make your AEM forms smarter and more responsive." />
-    <meta property="og:url" content="https://infodales.com/adaptive-form-fragments.html" />
-    <meta property="og:site_name" content="Blogs | Geolocation : AEM Forms with Dynamic Location" />
+    <meta property="og:url" content="https://infodales.com/blogs/geolocation-forms.html" />
+    <meta property="og:site_name" content="Geolocation : AEM Forms with Dynamic Location" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
