--- a/blogs/google-api-form.html
+++ b/blogs/google-api-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | AEM Forms : Adaptive Form Fragments</title>
+	<title>AEM Forms with Google Maps API's</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content=" AEM Forms with Google Maps API's">
@@ -10,11 +10,11 @@
 	zipcode, city, state, and country data. By leveraging Google Maps APIs for geolocation, you’ll be able to create a highly interactive and user-friendly form experience. We’ll also cover the essential steps, integrating Google Maps API keys to bring this functionality to life. Join us as we dive into these powerful integrations to make your AEM forms smarter and more responsive.">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | AEM Forms with Google Maps API's" />
+    <meta property="og:title" content="AEM Forms with Google Maps API's" />
     <meta property="og:description" content="In today’s digital world, enhancing user experience in forms can significantly impact engagement and usability. In this blog, we’ll explore how to supercharge your Adobe Experience Manager (AEM) forms by integrating Google Maps APIs. We’ll guide you through creating dynamic forms that  fetch and display the user’s current location like street, 
 	zipcode, city, state, and country data. By leveraging Google Maps APIs for geolocation, you’ll be able to create a highly interactive and user-friendly form experience. We’ll also cover the essential steps, integrating Google Maps API keys to bring this functionality to life. Join us as we dive into these powerful integrations to make your AEM forms smarter and more responsive." />
-    <meta property="og:url" content="https://infodales.com/google-api-form.html" />
-    <meta property="og:site_name" content="Blogs | AEM Forms with Google Maps API's" />
+    <meta property="og:url" content="https://infodales.com/blogs/google-api-form.html" />
+    <meta property="og:site_name" content="AEM Forms with Google Maps API's" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
