--- a/blogs/sms-twoway-aem-forms.html
+++ b/blogs/sms-twoway-aem-forms.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Enhancing Security with SMS Two Factor Authentication in AEM Forms</title>
+	<title>Enhancing Security with SMS Two Factor Authentication in AEM Forms</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content=" Enhancing Security with SMS Two Factor Authentication in AEM Forms">
+	<meta name="description" content="Enhancing Security with SMS Two Factor Authentication in AEM Forms">
     <meta name="keywords" content="SMS 2FA adds an extra layer of security by requiring users to verify their identity not only with a password but also with a unique verification code sent to their mobile devices ">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Enhancing Security with SMS Two Factor Authentication in AEM Forms" />
+    <meta property="og:title" content="Enhancing Security with SMS Two Factor Authentication in AEM Forms" />
     <meta property="og:description" content="One effective way to enhance security is through SMS-based two-factor authentication (2FA), a robust method that adds an extra layer of protection to online accounts. Let's delve into how SMS 2FA works and why it's a crucial tool in the fight against unauthorized access." />
-    <meta property="og:url" content="https://infodales.com/sms-twoway-aem-forms.html" />
-    <meta property="og:site_name" content="Blogs | Enhancing Security with SMS Two Factor Authentication in AEM Forms" />
+    <meta property="og:url" content="https://infodales.com/blogs/sms-twoway-aem-forms.html" />
+    <meta property="og:site_name" content="Enhancing Security with SMS Two Factor Authentication in AEM Forms" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
@@ -63,9 +62,6 @@
 					</div>
 				
 				<hr style="margin: 20px 0 10px 0;">
-				<!-- <div class="image-container">
-					<img src="images/cover.webp" alt="Image Description">
-				</div> -->
 				<div class="blog-items">
 					<h3 style="text-align: left; margin: 0px 0">SMS Two-Factor Authentication</h3>
         			<p>In today's digital landscape, security is paramount. With cyber threats evolving constantly, safeguarding user accounts has become a top priority for businesses and individuals alike. One effective way to enhance security is through SMS-based two-factor authentication (2FA), a robust method that adds an extra layer of protection to online accounts. Let's delve into how SMS 2FA works and why it's a crucial tool in the fight against unauthorized access.</p>
