--- a/blogs/spa-component-mapping.html
+++ b/blogs/spa-component-mapping.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Mapping AEM Component to React Component</title>
+	<title>Mapping AEM Component to React Component</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="The Basic concept is to map the AEM component to React component, Basically AEM Component runs at Server side and it exports the content in the form of JSON Model API.so that JSON file - for e.g (en.model.json) is consumed by	our React Component running at an Client side in the browser. We'll know more about the following concept with the help of the following diagram.">
-    <meta name="keywords" content="Infodales, Adobe AEM SPA, Single Page Application, SPA component">
+    <meta name="keywords" content="Infodales, Adobe AEM SPA, Single Page Application, SPA component mapping">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Mapping AEM component to React component" />
+    <meta property="og:title" content="Mapping AEM component to React component" />
     <meta property="og:description" content="The Basic concept is to map the AEM component to React component, Basically AEM Component runs at Server side and it exports the content in the form of JSON Model API.so that JSON file - for e.g (en.model.json) is consumed by	our React Component running at an Client side in the browser. We'll know more about the following concept with the help of the following diagram.">
-    <meta property="og:url" content="https://infodales.com/spa-component-mapping.html" />
-    <meta property="og:site_name" content="Blogs | Mapping AEM component to React component" />
+    <meta property="og:url" content="https://infodales.com/blogs/spa-component-mapping.html" />
+    <meta property="og:site_name" content="Mapping AEM component to React component" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
