--- a/blogs/submitting-adaptive-form.html
+++ b/blogs/submitting-adaptive-form.html
@@ -2,9 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Submitting Adaptive Form using Form Data Model</title>
+	<title>Submitting Adaptive Form using Form Data Model</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This blog will help you understand how to connect a database to your AEM adaptive forms to retrieve and insert form values. When integrating Adaptive Forms with a Database, establishing	seamless connections to data sources becomes essential for retrieving customer data during form	rendering. Various scenarios may require data retrieval from these sources based on user inputs	within Adaptive Forms. Additionally, upon submitting an Adaptive Form to a database, the captured data can be efficiently updated back into the corresponding data sources.">
+  	<meta name="keywords" content="Infodales, Adobe AEM Forms, Adaptive Forms, AEM">
+	<meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Submitting Adaptive Form using Form Data Model" />
+    <meta property="og:description" content="This blog will help you understand how to connect a database to your AEM adaptive forms to retrieve and insert form values. When integrating Adaptive Forms with a Database, establishing	seamless connections to data sources becomes essential for retrieving customer data during form	rendering. Various scenarios may require data retrieval from these sources based on user inputs	within Adaptive Forms. Additionally, upon submitting an Adaptive Form to a database, the captured data can be efficiently updated back into the corresponding data sources." />
+    <meta property="og:url" content="https://infodales.com/blogs/submitting-adaptive-form.html" />
+    <meta property="og:site_name" content="Submitting Adaptive Form using Form Data Model" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
