--- a/blogs/vanityURLs.html
+++ b/blogs/vanityURLs.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Dispatcher Setup and Configurations</title>
+	<title>Handelling Vanity URLs in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Welcome to the blog, here we will understand setting up and configuration of dispatcher">
-    <meta name="keywords" content="Infodales, Dispatcher">
+   <meta name="description" content="Vanity URLs are nothing but friendly URLs. Suppose we have a URL:localhost/content/abc/def/ghi/organization/team.html which is not really eye catching to the users so AEM authors are provided the previllege to transform this URL into a more user friendly URL such as localhost:4502/organization/team.html which is indeed a vanity url of the provided one.">
+    <meta name="keywords" content="Infodales, Vanity URLs, AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Setting up and Configuration of Dispatcher" />
-    <meta property="og:description" content="Welcome to the blog, here we will understand setting up and configuration of dispatcher" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Setting up and Configuration of Dispatcher" />
+    <meta property="og:title" content="Handelling Vanity URLs in AEM" />
+    <meta property="og:description" content="Vanity URLs are nothing but friendly URLs. Suppose we have a URL:localhost/content/abc/def/ghi/organization/team.html which is not really eye catching to the users so AEM authors are provided the previllege to transform this URL into a more user friendly URL such as localhost:4502/organization/team.html which is indeed a vanity url of the provided one." />
+    <meta property="og:url" content="https://infodales.com/BLOGS/vanityURLs.html" />
+    <meta property="og:site_name" content="Handelling Vanity URLs in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
