--- a/blogs/dispatcher.html
+++ b/blogs/dispatcher.html
@@ -2,24 +2,23 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Dispatcher Setup and Configurations</title>
+	<title>Dispatcher Setup and Configurations</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Welcome to the blog, here we will understand setting up and configuration of dispatcher">
     <meta name="keywords" content="Infodales, Dispatcher">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Setting up and Configuration of Dispatcher" />
+    <meta property="og:title" content="Setting up and Configuration of Dispatcher" />
     <meta property="og:description" content="Welcome to the blog, here we will understand setting up and configuration of dispatcher" />
-    <meta property="og:url" content="https://infodales.com/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Setting up and Configuration of Dispatcher" />
+    <meta property="og:url" content="https://infodales.com/blogs/dispatcher.html" />
+    <meta property="og:site_name" content="Setting up and Configuration of Dispatcher" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 
 </head>
 
@@ -43,7 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
