--- a/blogs/query-builder.html
+++ b/blogs/query-builder.html
@@ -2,25 +2,23 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | GraphQL in AEM</title>
+	<title>Query Builder in AEM</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="In Adobe Experience Manager (AEM), a Query Builder is a powerful and flexible tool that allows us to create and execute queries to retrieve content from the AEM repository. It provides a structured and efficient way to search for specific content based on various criteria.">
     <meta name="keywords" content="Infodales, Query Builder in AEM, Query, Predicates, AEM">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Query Builder in AEM" />
+    <meta property="og:title" content="Query Builder in AEM" />
     <meta property="og:description" content="In Adobe Experience Manager (AEM), a Query Builder is a powerful and flexible tool that allows us to create and execute queries to retrieve content from the AEM repository. It provides a structured and efficient way to search for specific content based on various criteria." />
     <meta property="og:url" content="https://infodales.com/blogs/query-builder.html" />
-    <meta property="og:site_name" content="Blogs | Query Builder in AEM" />
+    <meta property="og:site_name" content="Query Builder in AEM" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-
 </head>
 
 <body>
@@ -43,7 +41,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
@@ -229,17 +226,6 @@ for (Hit hit : resultList ) {
                     <span class="author-designation">AEM Developer</span>
                 </div>
                 </div>
-                <!-- <div style="display: flex; justify-content: center;">
-                <div class="comment-box" >
-                    <h3> Leave a Comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name"/>
-                        <input type="email" placeholder="Enter Email"/>
-                        <textarea  rows="5" placeholder="Your Comments"></textarea>
-                        <button type="submit" class="hero-btn red-btn">Your Comment</button>
-                    </form>
-                </div>
-                </div> -->
             </div>
 		</div>
 	</section>
