--- a/blogs/rule-editor-show-hide.html
+++ b/blogs/rule-editor-show-hide.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | AEM Forms : Show Hide in Rule Editor</title>
+	<title>AEM Forms : Show Hide in Rule Editor</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="In AEM 6.5.xx, we have code editor as well as visual editor wherein you can apply your rules to be followed by the fields either by using functionalities of visual editor or by customizing your own logic in JavaScript and adding the same in code editor.">
   	<meta name="keywords" content="Infodales, Adobe AEM Forms, Rule Editor, Show Hide">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs |  AEM Forms : Show Hide in Rule Editor" />
+    <meta property="og:title" content="AEM Forms : Show Hide in Rule Editor" />
     <meta property="og:description" content="In AEM 6.5.xx, we have code editor as well as visual editor wherein you can apply your rules to be followed by the fields either by using functionalities of visual editor or by customizing your own logic in JavaScript and adding the same in code editor." />
     <meta property="og:url" content="https://infodales.com/blogs/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs |  AEM Forms : Show Hide in Rule Editor" />
+    <meta property="og:site_name" content="AEM Forms : Show Hide in Rule Editor" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span>AEM Forms : Show Hide in Rule Editor</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
