--- a/blogs/spa-getting-started.html
+++ b/blogs/spa-getting-started.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Getting started with AEM SPA</title>
+	<title>Getting started with AEM SPA</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog.">
   	<meta name="keywords" content="Infodales, Adobe AEM SPA, Single Page Application, SPA component, SPA with AEM">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Getting started with AEM SPA" />
+    <meta property="og:title" content="Getting started with AEM SPA" />
     <meta property="og:description" content="Welcome to the blog designed for developers new to the AEM SPA concept. This blog will walk you through some of the well known questions like What is SPA? Why SPA? and mainly Why SPA with AEM? We'll cover these questions in this blog." />
     <meta property="og:url" content="https://infodales.com/blogs/spa-getting-started.html" />
-    <meta property="og:site_name" content="Blogs | Getting started with AEM SPA" />
+    <meta property="og:site_name" content="Getting started with AEM SPA" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,8 +42,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
