--- a/blogs/targeting-in-aem.html
+++ b/blogs/targeting-in-aem.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Blogs | Targeting in AEM - Part 1</title>
+	<title>Targeting in AEM - Part 1</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Content personalization in short means delivering the right content to the right person in real-time.">
   	<meta name="keywords" content="Infodales, Adobe AEM, Targeting, Personalization, Targeting in AEM">
 	<meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogs | Targeting in AEM - Part 1" />
+    <meta property="og:title" content="Targeting in AEM - Part 1" />
     <meta property="og:description" content="Content personalization in short means delivering the right content to the right person in real-time." />
     <meta property="og:url" content="https://infodales.com/blogs/targeting-in-aem.html" />
-    <meta property="og:site_name" content="Blogs | Targeting in AEM - Part 1" />
+    <meta property="og:site_name" content="Targeting in AEM - Part 1" />
 	<link rel="stylesheet" href="/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,8 +41,6 @@
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
